fix build for jdk 17 [skip ci]